--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2682,6 +2682,197 @@ Y
 \end{problem}
 
 
+
+\section{Большая сила о-малых}
+
+\begin{problem}
+Вероятность того, что Ученик достигнет Просветления за малый интервал времени,
+прямо пропорциональна длине этого интервала, то есть
+\[
+\P(\text{достигнуть Просветления за отрезок времени }[t;t+\Delta]) = \lambda \Delta + o(\Delta)
+\]
+
+Какова точная вероятность того, что Ученик, начавший искать Просветление, так
+и не достигнет его к моменту времени $t$?
+
+\begin{sol}
+Обозначим искомую вероятность быть в Неведении в момент $t$ значком $p_t$.
+\[
+p_{t+\Delta} = p_t (1-\lambda\Delta - o(\Delta))
+\]
+
+Отсюда получаем, что
+\[
+\frac{p_{t+\Delta} - p_t}{\Delta} = -\lambda p_t + \frac{o(\Delta)}{\Delta}
+\]
+Устремляем $\Delta$ к нулю и решаем получающееся дифференциальное уравнение
+с начальным условием $p_0 = 1$, так как изначально Ученик находится в Неведении.
+
+Итого:
+\[
+p_t = \exp(-\lambda t)
+\]
+\end{sol}
+\end{problem}
+
+\begin{problem}
+Дворняги благородных кровей, Шарик и Тузик, очень любят тусоваться вместе.
+Изначально блоха Изабелла сидит на Шарике.
+Вероятность перескока Изабеллы с одной собаки на другую за малый интервал времени
+прямо пропорциональна длине этого интервала, то есть:
+\[
+\P(\text{перескок за отрезок времени }[t;t+\Delta]) = \lambda \Delta + o(\Delta)
+\]
+
+Какова точная вероятность того, что блоха Изабелла будет сидеть на Шарике
+в момент времени $t$?
+
+
+\begin{sol}
+Уже для двух перескоков вероятность не превосходит $(\lambda\Delta + o(\Delta))^2 = o(\Delta)$.
+Даже если сложить вероятности от двух перескоков до бесконечности,
+мы получаем сумму равную $o(\Delta)$.
+Следоветельно, вероятность нуля перескоков равна $1-\lambda\Delta - o(\Delta)$.
+
+Обозначим вероятность нахождения на Шарике в момент времени $t$ значком $p_t$.
+Отсюда:
+\[
+p_{t+\Delta} = p_t(1-\lambda\Delta - o(\Delta)) + (1-p_t)(\lambda\Delta + o(\Delta)) + o(\Delta)
+\]
+
+Получаем дифференциальное уравнение:
+\[
+\dot p_t = \lambda - 2\lambda p_t
+\]
+Для начального условия $p_0=1$ получаем решение $p_t = 0.5 + 0.5 \exp(-2\lambda t)$.
+\end{sol}
+\end{problem}
+
+
+\begin{problem}
+В десятиэтажном доме есть невероятный лифт.
+Вероятность отправки лифта вверх или вниз за малый промежуток времени $[t;t+\Delta]$
+прямо пропорциональна длине этого промежутка. А именно,
+\[
+\P(\text{лифт отправится вверх за интервал }[t;t+\Delta]) = \lambda_u \Delta + o(\Delta)
+\]
+\[
+\P(\text{лифт отправится вниз за интервал }[t;t+\Delta]) = \lambda_d \Delta + o(\Delta)
+\]
+
+Если лифт стоит на первом или последнем этаже и нет возможности двигаться вверх или вниз,
+то соответствующая вероятность зануляется.
+
+Обозначим $N_t$ — этаж, на котором находится лифт в момент времени $t$.
+Система находится в стохастическом равновесии, то есть вероятности $\P(N_t = k)$
+постоянны во времени.
+
+\begin{enumerate}
+  \item Найдите вероятность встретить лифт на каждом этаже;
+  \item При каком соотношении $\lambda_u$ и $\lambda_d$ вероятность встретить лифт
+  на втором этаже максимальна?
+\end{enumerate}
+
+\begin{sol}
+В равновесии выполнено соотношение
+\[
+p_{k+1} = \frac{\lambda_u}{\lambda_d} p_k
+\]
+
+Следовательно, $p_k = \left( \frac{\lambda_u}{\lambda_d}  \right)^k p_0$.
+
+Исходя из условия $\sum_k p_k = 1$ находим $p_0$.
+
+\end{sol}
+\end{problem}
+
+
+
+
+\begin{problem}
+На одного покупателя кассирша Марфа Петровна тратит экспоненциальное время
+с параметром $\lambda_s$.
+Покупатели приходят пуассоновским потоком с параметром $\lambda_{in}$.
+
+Длина очереди к Марфе Петровне в момент времени $t$ — случайная величина $L_t$.
+Предположим, что система находится в стохастическом равновесии, то есть
+вероятности $\P(L_t=k)$ не зависят от $t$.
+
+\begin{enumerate}
+  \item Найдите вероятности $\P(L_t=k)$;
+  \item Найдите среднюю длину очереди $\E(L_t)$;
+\end{enumerate}
+
+\begin{sol}
+  При $k\geq 1$ получаем уравнение
+  \[
+     \P(L_{t+\Delta} = k) = \lambda_{in}\Delta \P(L_t = k-1) + \lambda_s \Delta \P(L_t = k + 1) + (1-\lambda_s \Delta - \lambda_{in}\Delta) \P(L_t = k) = o(\Delta)
+  \]
+  При $k=0$ уравнение особое:
+  \[
+     \P(L_{t+\Delta} = 0) = (1 - \lambda_{in}\Delta) \P(L_t = 0) + \lambda_s \Delta \P(L_t = 1) + o(\Delta)
+  \]
+  Приравниваем $\P(L_{t+\Delta} = k)$ и $\P(L_t = k)$, для краткости обозначим $p_k$. Устремляем $\Delta$ к нулю.
+
+  Получаем разностные уравнения:
+  \[
+  \begin{cases}
+    p_1 = \frac{\lambda_{in}}{\lambda_s} p_0 \\
+    p_{k+1} = \frac{\lambda_s + \lambda_{in}}{\lambda_s} p_k - \frac{\lambda_{in}}{\lambda_s}p_{k-1}
+  \end{cases}
+  \]
+
+  С условием нормировки $\sum p_k = 1$ решение системы единственно,
+  \[
+      p_k = (1 - a)a^k, \; a = \lambda_{in}/\lambda_s
+  \]
+  То есть длина очереди имеет геометрическое распределение.
+
+  Поэтому средняя длина очереди равна $\E(L_t) = a/(1-a)=\frac{\lambda_{in}}{\lambda_s - \lambda_{in}}$.
+
+  Заметим, что если $\lambda_s \approx \lambda_{in}$, длина очереди будет просто огромной!
+\end{sol}
+\end{problem}
+
+\begin{problem}
+Исследователь Василий выбирает равномерно и независимо друг от друга 10 точек на
+отрезке $[0;1]$. Затем Василий записывает их координаты в порядке возрастания,
+$Y_1 \leq Y_2 \leq \ldots \leq Y_{10}$.
+
+Не производя вычислений, \textit{по определению}, выпишите функции плотности:
+\begin{enumerate}
+  \item величины $Y_1$;
+  \item величины $Y_{10}$;
+  \item величины $Y_4$;
+  \item пары величин $Y_2$ и $Y_7$;
+  \item пары величин $Y_3$ и $Y_5$;
+  \item тройки величин $Y_1$, $Y_4$ и $Y_9$;
+  \item всех величин $Y_1$, \ldots, $Y_{10}$;
+\end{enumerate}
+\begin{sol}
+  Например, для $Y_4$:
+  \[
+    \P(Y_4 \in [t; t+\Delta]) = C_{10}^1 \cdot \Delta \cdot C_{9}^3 t^3 (1-t)^6 + o(\Delta)
+  \]
+
+  Читаем вслух:
+  \begin{enumerate}
+    \item Одна из десяти величин должна попасть в отрезок $[t; t + \Delta]$;
+    \item Три из девяти оставшихся должны оказаться меньше $t$;
+    \item Шесть из девяти оставших должны оказаться больше $t$;
+  \end{enumerate}
+  Вероятностью попадания двух и более величин в отрезок длине $\Delta$ пренебрегаем!
+\end{sol}
+\end{problem}
+
+\begin{problem}
+про нормальное распределение
+\begin{sol}
+\end{sol}
+\end{problem}
+
+
+
 \section{Броуновское движение}
 
 \begin{problem}
