--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2686,10 +2686,10 @@ Y
 \section{Большая сила о-малых}
 
 \begin{problem}
-Вероятность того, что Ученик достигнет Просветления за малый интервал времени,
+Вероятность того, что непросветлённый Ученик достигнет Просветления за малый интервал времени,
 прямо пропорциональна длине этого интервала, то есть
 \[
-\P(\text{достигнуть Просветления за отрезок времени }[t;t+\Delta]) = \lambda \Delta + o(\Delta)
+\P(\text{достигнуть Просветления за отрезок времени }[0;0+\Delta]) = \lambda \Delta + o(\Delta)
 \]
 
 Какова точная вероятность того, что Ученик, начавший искать Просветление, так
@@ -2751,6 +2751,7 @@ p_{t+\Delta} = p_t(1-\lambda\Delta - o(\Delta)) + (1-p_t)(\lambda\Delta + o(\Del
 
 \begin{problem}
 В десятиэтажном доме есть невероятный лифт.
+Лифт мнгновенно способен подняться или опуститься на один этаж. 
 Вероятность отправки лифта вверх или вниз за малый промежуток времени $[t;t+\Delta]$
 прямо пропорциональна длине этого промежутка. А именно,
 \[
