--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -810,7 +810,7 @@ p_{k+1} = \frac{\lambda_u}{\lambda_d} p_k
     \item Три из девяти оставшихся должны оказаться меньше $t$;
     \item Шесть из девяти оставших должны оказаться больше $t$;
   \end{enumerate}
-  Вероятностью попадания двух и более величин в отрезок длине $\Delta$ пренебрегаем!
+  Вероятностью попадания двух и более величин в отрезок длины $\Delta$ пренебрегаем!
 \end{solution}
 \protect \hypertarget {soln:17.6}{}
 \begin{solution}{{17.6}}
