--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -2009,7 +2009,7 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \begin{problem}
   Величина $X$ имеет нормальное распределение $\cN(\mu; \sigma^2)$, а функция $g(t)$ дифференцируема и не слишком быстро растёт при $t\to\infty$.
   \begin{enumerate}
-    \item Докажите, что $\E((X-\mu)f(X))=\sigma^2 \E(f'(X))$.
+    \item Докажите, что $\E((X-\mu)g(X))=\sigma^2 \E(g'(X))$.
     \item Найдите $\E(X^4)$ и $\E(X^6)$ для $X \sim \cN(0;1)$.
   \end{enumerate}
 \begin{sol}
@@ -2751,7 +2751,7 @@ p_{t+\Delta} = p_t(1-\lambda\Delta - o(\Delta)) + (1-p_t)(\lambda\Delta + o(\Del
 
 \begin{problem}
 В десятиэтажном доме есть невероятный лифт.
-Лифт мнгновенно способен подняться или опуститься на один этаж. 
+Лифт мнгновенно способен подняться или опуститься на один этаж.
 Вероятность отправки лифта вверх или вниз за малый промежуток времени $[t;t+\Delta]$
 прямо пропорциональна длине этого промежутка. А именно,
 \[
@@ -2862,7 +2862,7 @@ $Y_1 \leq Y_2 \leq \ldots \leq Y_{10}$.
     \item Три из девяти оставшихся должны оказаться меньше $t$;
     \item Шесть из девяти оставших должны оказаться больше $t$;
   \end{enumerate}
-  Вероятностью попадания двух и более величин в отрезок длине $\Delta$ пренебрегаем!
+  Вероятностью попадания двух и более величин в отрезок длины $\Delta$ пренебрегаем!
 \end{sol}
 \end{problem}
 
