--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -715,7 +715,7 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:16.11}{}
 \begin{solution}{{16.11}}
-  $Y \sim N(0;1)$, нет, они нормальны только по отдельности, но не в совокупности, $\Corr(X,Y)=0$. Взять $Y=XZ$, где $Z$ принимает значение $1$ с вероятностью $p=3/4$ и $-1$ с вероятностью $1-p=1/4$
+$Y \sim \cN(0;1)$, нет, они нормальны только по отдельности, но не в совокупности, $\Corr(X,Y)=0$. Взять $Y=XZ$, где $Z$ принимает значение $1$ с вероятностью $p=3/4$ и $-1$ с вероятностью $1-p=1/4$
 \end{solution}
 \protect \hypertarget {soln:17.1}{}
 \begin{solution}{{17.1}}
