--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -5,6 +5,7 @@
 % utf8 is the preferred encoding
 
 
+
 \input{title_bor_utf8_knitr}
 \input{emetrix_preamble}
 
@@ -2204,15 +2205,13 @@ f(Z_n) \approx \cN\left(f(\mu); \frac{(f'(\mu))^2\sigma^2}{n} \right) \text{ (п
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
- Величина $X$ имеет биномиальное распределение $Bin(n,p)$ и $n$ велико. Какое распределение примерно имеют величины $\ln(X/n)$? $X/(n-X)$?
-
-
-
-
+Величина $X$ имеет биномиальное распределение $Bin(n,p)$ и $n$ велико. Какое распределение примерно имеют величины $\ln(X/n)$? $X/(n-X)$?
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
  (*) Случайные величины $X$ и $Y$ независимы и равновероятно принимают значения от $1$ до $n$. Вероятность того, что сумма $X+Y$ является квадратом натурального числа, обозначим $p_n$. Найдите предел $\lim_{n\to\infty} \sqrt{n} p_n$.
 
@@ -2330,12 +2329,13 @@ $f_{X}(x)=
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Величины $X_1$, $X_2$, \ldots независимы и одинаково распределены $\cN(2; 9)$. Мы складываем случайное количество $N$ слагаемых. Величина $N$ независима от $X_i$ и распределена по Пуассону с параметром $\lambda = 10$.  Обозначим сумму буквой $S=\sum_{i=1}^{N}X_i$. Найдите $\E(S)$, $\Var(S)$ и $Cov(S,N)$
-
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
  Неправильный кубик выпадает с вероятностью $0{,}5$ шестеркой вверх. Остальные пять граней выпадают равновероятно. Случайная величина $X$ — остаток от деления номера грани на два, $Y$ — остаток от деления номера грани на три. Найдите
 \begin{enumerate}
@@ -2423,7 +2423,7 @@ $f_{X}(x)=
 \begin{problem}
 Теорема Хершела-Максвелла
 
-Рассмотрим замкнутую плоскую фигуру внутри которой случайно летают частицы. Обозначим $V=(V_x, V_y)'$ — вектор скоростей случайно выбираемое частицы.
+Рассмотрим замкнутую плоскую фигуру внутри которой случайно летают частицы. Обозначим $V=(X, Y)'$ — вектор скоростей случайно выбираемой частицы.
 
 Максвелл предположил, что:
 
@@ -2434,21 +2434,21 @@ $f_{X}(x)=
 
 \begin{enumerate}
   \item Какой вектор получится, если вектор $V$ поверхнуть на $90^{\circ}$ по часовой стрелке?
-  \item Докажите, что $V_x$ распределено так же, как $V_y$ и также как $-V_y$.
-  \item Чему равное $\E(V_x)$? Верно ли, что $\Var(V_x) = \Var(V_y)$?
-  \item Докажите, что совместная функция плотности $f(v_x, v_y)$ представима в виде
+  \item Докажите, что $X$ распределена так же, как $Y$ и также как $-Y$.
+  \item Чему равное $\E(X)$? Верно ли, что $\Var(X) = \Var(Y)$?
+  \item Докажите, что совместная функция плотности $f(x, y)$ представима в виде
   \[
-f(v_x, v_y) = h(v_x^2 + v_y^2)
+f(x, y) = h(x^2 + y^2)
   \]
   \item Докажите, что совместная функция плотности
-  $f(v_x, v_y)$ представима в виде
+  $f(x, y)$ представима в виде
   \[
-f(v_x, v_y) = g(v_x^2)\cdot g(v_y^2)
+f(x, y) = g(x^2)\cdot g(y^2)
   \]
-  \item Докажите, что $h'(t)/h(t)$ равно константе.
+  \item Докажите, что отношение $h'(t)/h(t)$ равно константе.
   \item Найдите функцию $h(t)$ с точностью до константы.
   \item Пусть $U$ — угол, а $R=\sqrt{x^2+y^2}$. Найдите совместную функцию плотности $U$ и $R$ с точностью до константы.
-  \item Найдите функцию плотсности $V_x$, если единицы измерения скорости выбраны так, что $\Var(V_x) = 1$.
+  \item Найдите функцию плотсности $X$, если единицы измерения скорости выбраны так, что $\Var(X) = 1$.
 \end{enumerate}
 
 
@@ -2492,7 +2492,6 @@ Y
 \end{problem}
 
 \begin{problem}
-
 Ермолай Лопахин решил приступить к вырубке вишневого сада. Однако выяснилось, что растут в нём не только вишни, но и яблони. Причём, по словам Любови Андреевны Раневской, среднее количество деревьев (а они периодически погибают от холода или жары, либо из семян вырастают новые) в саду распределено в соответствии с нормальным законом ($X$ — число яблонь, $Y$ — число вишен) со следующими параметрами:
 \begin{equation}
 \begin{pmatrix}	X \\ 	Y 	\end{pmatrix}
@@ -2514,32 +2513,24 @@ Y
 
 Автор: Кирилл Фурманов, Ира Чернухина
 
-
-
 \begin{sol}
 \end{sol}
 \end{problem}
-\begin{problem}
 
+
+\begin{problem}
 В самолете пассажирам предлагают на выбор «мясо» или «курицу». В самолет 250 мест. Каждый пассажир с вероятностью 0.6 выбирает курицу, и с вероятностью 0.4 — мясо. Сколько порций курицы и мяса нужно взять, чтобы с вероятностью 99\% каждый пассажир получил предпочитаемое блюдо, а стоимость «мяса» и «курицы» для компании одинаковая?
 
-
 Как изменится ответ, если компания берет на борт одинаковое количество «мяса» и «курицы»?
-
-
-
-
-
 \begin{sol}
   $K=170$, $M=120$ (симметричный интервал) или $K=M=168$ (площадь с одного края можно принять за 0) \\
   Вариант: театр, два входа, два гардероба а) только пары, б) по одному
 \end{sol}
 \end{problem}
-\begin{problem}
 
+\begin{problem}
 Сэр Фрэнсис Гальтон —  учёный XIX-XX веков, один из основоположников как
 генетики, так и статистики — изучал, среди всего прочего, связь между ростом детей и родителей.  Он исследовал данные о росте 928 индивидов. Обозначим $X_1$ — рост случайного человека, а $X_2$ — среднее арифметическое роста его отца и матери. По результатам исследования Гальтона:
-
 
 \[
 \begin{pmatrix}
@@ -2575,10 +2566,14 @@ X_2
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
+
+
 \begin{problem}
  «Регрессия к среднему»
 
-Каждый день независимо от других муж дарит Машке случайное количество роз. Логарифм количества роз (в тысячах цветов), подаренных мужем в день $t$, $\e_t$, имеет нормальное распределение $N(0,1)$. Улыбчивость Машки в день $t$, обозначаемая $Y_t$, зависит от количества цветов, подаренных в этот и в предыдущей день, $Y_t=\e_t+0.5\e_{t-1}$. Подружка Машки не наблюдает подарки Машкиного мужа, $\e_t$, однако видит улыбчивость Машки, $Y_t$. Машкина подружка хочет спрогнозировать завтрашнюю улыбчивость Машки, исходя из прошлой информации.
+Каждый день независимо от других муж дарит Машке случайное количество роз. Логарифм количества роз (в тысячах цветов), подаренных мужем в день $t$, $\e_t$, имеет нормальное распределение $\cN(0,1)$. Улыбчивость Машки в день $t$, обозначаемая $Y_t$, зависит от количества цветов, подаренных в этот и в предыдущей день, $Y_t=\e_t+0.5\e_{t-1}$. Подружка Машки не наблюдает подарки Машкиного мужа, $\e_t$, однако видит улыбчивость Машки, $Y_t$. Машкина подружка хочет спрогнозировать завтрашнюю улыбчивость Машки, исходя из прошлой информации.
 
 \begin{enumerate}
 \item Найдите $\Corr(Y_t,Y_{t-1})$
@@ -2586,11 +2581,8 @@ X_2
 \item Проинтерпретируйте величину коэффициента при $Y_{t-1}$, становится ли Машка в среднем улыбчивей или грустней со временем?
 \item Исследователь Вениамин собрал данные по 1000 семей и изобразил диаграмму рассеяния в осях (рост мамы в 20 лет, рост дочки в 20 лет). Далее он провел наиболее похожую на эти точки прямую. Наклон этой прямой скорее всего будет около 1, меньше 1, больше 1?
 \item Если Вовочка плохо пишет контрольную, то его лишают мороженого. После этого успеваемость Вовочки как правило улучшается. В чём сходство этой ситуации с данной задачей?
-\item Найдите прогноз $\E(Y_t | Y_{t-1}, Y_{t-2})$
-
+\item Найдите прогноз $\E(Y_t | Y_{t-1}, Y_{t-2})$.
 \end{enumerate}
-
-
 
 \begin{sol}
   $\Corr(Y_1, Y_2) = 2/5$, $E(Y_t | Y_{t-1}) = 0.4 Y_{t-1}$
@@ -2598,8 +2590,9 @@ X_2
   Представить $\E(Y_t | Y_{t-1}, Y_{t-2})$ в виде $\E(Y_t | Y_{t-1}, Y_{t-2}) = a_1 Y_{t-1} + a_2 Y_{t-2} + Z$
 \end{sol}
 \end{problem}
+
 \begin{problem}
- Пара случайных величин $X$ и $Y$ имеет совместное нормальное распределение:
+Пара случайных величин $X$ и $Y$ имеет совместное нормальное распределение:
 
 \[
 \begin{pmatrix}
@@ -2630,8 +2623,10 @@ Y
 \begin{sol}
 \end{sol}
 \end{problem}
+
+
 \begin{problem}
- Случайная величина $X$ нормально распределена, $N(0;4)$. При фиксированном $X$ случайная величина $Y$ нормально распределена, $N(2X-1, 9)$.
+ Случайная величина $X$ нормально распределена, $\cN(0;4)$. При фиксированном $X$ случайная величина $Y$ нормально распределена, $\cN(2X-1, 9)$.
 \begin{enumerate}
 \item Найдите безусловный закон распределения величины $Y$
 \item Найдите $\Cov(X,Y)$
@@ -2642,8 +2637,9 @@ Y
 \begin{sol}
 \end{sol}
 \end{problem}
+
 \begin{problem}
- Маша прячется от Медведей в случайной точке на числовой прямой. Место, где спряталась Маша — cлучайная величина $X$, имеющая нормальное распределение, $N(0;4)$. Каждый из $n$ Медведей, обнюхав числовую прямую, имеет своё мнение о том, где спряталась Маша. Эти мнения — случайные величины $Y_i$. При фиксированном $X$ случайные величины $Y_1$, \ldots, $Y_n$ условно независимы и нормально распределены, $N(X, 9)$.
+ Маша прячется от Медведей в случайной точке на числовой прямой. Место, где спряталась Маша — cлучайная величина $X$, имеющая нормальное распределение, $\cN(0;4)$. Каждый из $n$ Медведей, обнюхав числовую прямую, имеет своё мнение о том, где спряталась Маша. Эти мнения — случайные величины $Y_i$. При фиксированном $X$ случайные величины $Y_1$, \ldots, $Y_n$ условно независимы и нормально распределены, $\cN(X, 9)$.
 
 \begin{enumerate}
 \item Михаилу Потапычу, Медведю номер 1, кажется, что Машей сильнее всего пахнет в точке $Y_1$. Где ему следует искать Машу, т.е. чему равно $\E(X | Y_1)$?
@@ -2673,11 +2669,8 @@ Y
 \item Приведите пример таких случайных величин $Z$ и $W$, что каждая из них имеет нормальное распределение, корреляция между ними равна $0.5$, однако распределение пары $(Z, W)$ не является совместным нормальным.
 \end{enumerate}
 
-
-
-
 \begin{sol}
-  $Y \sim N(0;1)$, нет, они нормальны только по отдельности, но не в совокупности, $\Corr(X,Y)=0$. Взять $Y=XZ$, где $Z$ принимает значение $1$ с вероятностью $p=3/4$ и $-1$ с вероятностью $1-p=1/4$
+$Y \sim \cN(0;1)$, нет, они нормальны только по отдельности, но не в совокупности, $\Corr(X,Y)=0$. Взять $Y=XZ$, где $Z$ принимает значение $1$ с вероятностью $p=3/4$ и $-1$ с вероятностью $1-p=1/4$
 \end{sol}
 \end{problem}
 
@@ -3131,7 +3124,7 @@ $Y_1 \leq Y_2 \leq \ldots \leq Y_{10}$.
 \begin{enumerate}
 \item Найдите выборочные характеристики: среднее, медиану, минимум и максимум, стандартную ошибку, 10\%-ый и 95\%-ый квантили.
 \item Постройте гистограмму распределения, выборочную функцию распределения для первых 20 чисел из случайной выборки
-\item Повторите данный опыт для нормального $N(5,1)$ распределения и для экспоненциального  распределения с параметром $\lambda=1$
+\item Повторите данный опыт для нормального $\cN(5,1)$ распределения и для экспоненциального  распределения с параметром $\lambda=1$
 \item Насколько сильно выборочные характеристики отличаются от истинных?
 \end{enumerate}
 
@@ -3427,7 +3420,7 @@ $\Var(\langle Z, z\rangle)=1$; $\Cov(\hat Z_i, \hat Z_j)=v_i v_j \Var( \langle Z
 
 Используя ML оцените вес слитка $m$ и параметр погрешности весов $b$, если
 \begin{enumerate}
-\item $u_i$ — независимы и $N(0;b)$
+\item $u_i$ — независимы и $\cN(0;b)$
 \item $u_i$ — независимы и $U[-b;b]$
 \end{enumerate}
 
@@ -3555,13 +3548,13 @@ $\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
 \end{sol}
 \end{problem}
 \begin{problem}
-  Пусть $X_{1}$, \ldots , $X_{n}$ - независимы и $N(\mu;\sigma^{2})$. Значение $\sigma^{2}$ известно.  Постройте MM и ML оценки параметра $\mu$.
+  Пусть $X_{1}$, \ldots , $X_{n}$ - независимы и $\cN(\mu;\sigma^{2})$. Значение $\sigma^{2}$ известно.  Постройте MM и ML оценки параметра $\mu$.
 
 \begin{sol}
 \end{sol}
 \end{problem}
 \begin{problem}
-  Пусть $X_{i}$ независимы и одинаково распределены $N(\alpha,2\alpha)$ \\
+  Пусть $X_{i}$ независимы и одинаково распределены $\cN(\alpha,2\alpha)$ \\
 По выборке $X_{1}$, \ldots , $X_{n}$ постройте оценку для $\alpha$ с помощью ML и MM. Оцените дисперсию ML оценки.
 
 
@@ -4165,7 +4158,7 @@ $\hat{\beta}_{2}=\frac{\sum{x_{i}Y_{i}}}{\sum x_{i}^{2}}$.
 \end{problem}
 
 \begin{problem}
-  Пусть $X_i$ — независимы и нормальны $N(\mu,1)$. Какова вероятность того, что интервал $[\bar{X}_{10}-1;\bar{X}_{10}+1]$ накроет неизвестное $\mu$? Постройте 90\%-ый доверительный интервал для $\mu$ вида $[\bar{X}_{10}-k;\bar{X}_{10}+k]$.
+  Пусть $X_i$ — независимы и нормальны $\cN(\mu,1)$. Какова вероятность того, что интервал $[\bar{X}_{10}-1;\bar{X}_{10}+1]$ накроет неизвестное $\mu$? Постройте 90\%-ый доверительный интервал для $\mu$ вида $[\bar{X}_{10}-k;\bar{X}_{10}+k]$.
 \begin{sol}
 \end{sol}
 \end{problem}
