--- a/title_bor_utf8_knitr.tex
+++ b/title_bor_utf8_knitr.tex
@@ -94,6 +94,7 @@
 \usepackage{subfigure} % для создания нескольких рисунков внутри одного
 
 \usepackage{tikz, pgfplots} % язык для рисования графики из latex'a
+\pgfplotsset{compat=1.16}
 \usetikzlibrary{trees} % tikz-прибамбас для рисовки деревьев
 \usepackage{tikz-qtree} % альтернативный tikz-прибамбас для рисовки деревьев
 \usetikzlibrary{arrows} % tikz-прибамбас для рисовки стрелочек подлиннее
@@ -116,6 +117,7 @@
 
 \usepackage{fontspec} % что-то про шрифты?
 \usepackage{polyglossia} % русификация xelatex
+\usepackage{csquotes}
 
 \setmainlanguage{russian}
 \setotherlanguages{english}
