--- a/probability_pro.tex
+++ b/probability_pro.tex
@@ -1,3 +1,4 @@
+%!TeX cleanPatterns = $OUTDIR/$JOB!($OUTEXT|.synctex.gz|.tex|.pdf), /$OUTDIR/_minted-$JOB/
 \documentclass[12pt, a4paper]{article}
 
 % If you can't see cyrillic letters in R-studio choose
